# AtlEventProcess

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/EventStorage/: Adler32MTDefaults.h  DRError.h  DWCBcout.h  DWError.h  DataReader.h  DataWriter.h  DataWriterCallBack.h  ESCompression.h  EventStorageIssues.h  EventStorageRecords.h  FileNameCallback.h  RawFileName.h  SimpleFileName.h  fRead.h  loadfRead.h  pickDataReader.h
include/compression/: DataBuffer.h  compression.h
include/eformat/: DetectorMask.h  EnumClass.h  FullEventFragment.h  FullEventFragmentNoTemplates.h  Header.h  HeaderMarker.h  Issue.h  Problem.h  ROBFragment.h  ROBFragmentNoTemplates.h  RunType.h  SourceIdentifier.h  Status.h  StreamTag.h  Version.h  blob.h  checksum.h  compression.h  eformat.h  index.h  util.h
include/eformat/old/: util.h
include/eformat/python/: container.h  storage.h  util.h
include/eformat/write/: FullEventFragment.h  ROBFragment.h  eformat.h  node.h
src/: AtlCopyBSEvent.cxx
